@@ -6,16 +6,17 @@
   <requires>
     <import addon="xbmc.python" version="2.14.0"/>
     <import addon="script.module.beautifulsoup4" version="4.3.1"/>
+	<import addon="script.module.requests"      version="2.4.3"/>
     <import addon="script.common.plugin.cache" version="2.5.2"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
     <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-	<summary lang="en">CNET Podcast Central</summary>
-	<description lang="en">www.cnet.com/who-we-are/CNET shows you the exciting possibilities of how technology can enhance and enrich your life. We provide you with information, tools, and advice that help you decide what to buy and how to get the most out of your tech.
+	<summary lang="en_GB">CNET Podcast Central</summary>
+	<description lang="en_GB">www.cnet.com/who-we-are/CNET shows you the exciting possibilities of how technology can enhance and enrich your life. We provide you with information, tools, and advice that help you decide what to buy and how to get the most out of your tech.
     </description>
-	<disclaimer lang="en">For bugs, requests or general questions visit the CNET Podcasts thread on the Kodi Video Add-ons forum.</disclaimer>
+	<disclaimer lang="en_GB">For bugs, requests or general questions visit the CNET Podcasts thread on the Kodi Video Add-ons forum.</disclaimer>
     <language>en</language>
     <platform>all</platform>
     <license>GNU GENERAL PUBLIC LICENSE. Version 3, June 2007</license>
