@@ -4,6 +4,10 @@ removed strings.xml
 added listitem.setInfo video for Kodi 18 and up
 added sorting
 added context item episode info
+removed 'latest videos' category as that already exists as 'all' category
+refactored listing the videos
+changed foldername for strings
+using requests
 
 v1.1.3 (2017-03-03)
 using po-files
@@ -56,4 +60,3 @@ added video descriptions
 added categories for SD and HD
 
 v0.0.1
-initial
